--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/list.json
+      - assets/data/list.json
+      - assets/images/instrument.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
